[gd_scene load_steps=2 format=3 uid="uid://b345bk26jamix"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_10yld"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10yld")

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.189
anchor_top = 0.154
anchor_right = 0.189
anchor_bottom = 0.154
offset_left = -247.4
offset_top = -23.6
offset_right = 246.6
offset_bottom = 24.4
theme_override_font_sizes/font_size = 32
text = "SCP-CB Map Generator v2.5 Example"

[node name="SmallFacility" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.53
anchor_right = 0.117
anchor_bottom = 0.53
offset_left = -120.64
offset_top = -28.4
offset_right = 119.36
offset_bottom = 28.6
grow_horizontal = 2
grow_vertical = 2
text = "Generate a small facility!"

[node name="Credits" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.625
anchor_right = 0.117
anchor_bottom = 0.625
offset_left = -120.64
offset_top = -27.0
offset_right = 119.36
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
text = "Credits"

[node name="Exit" type="Button" parent="Title"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.72
anchor_right = 0.117
anchor_bottom = 0.72
offset_left = -120.64
offset_top = -25.6001
offset_right = 119.36
offset_bottom = 25.3999
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="CreditPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -172.0
offset_right = 375.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -140.0
offset_right = 340.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
text = "Map generation script created by juanjp600

Created main menu + ported to GDScript by Yni Viar.

The license is CC-BY-SA-3.0"

[connection signal="pressed" from="Title/SmallFacility" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Title/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Title/Exit" to="." method="_on_exit_pressed"]
